--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,7 @@ body {
 .status {
   margin-bottom: 10px;
 }
+
 .game {
   display: flex;
   flex-direction: row;
@@ -87,4 +88,12 @@ body {
 
 .game-info {
   margin-left: 20px;
+}
+
+p {
+  margin: 0;
+}
+
+.win {
+  background: #f66
 }
